[STREAMPIPES-79] Exchange event schema for pipelines in the ui

--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
@@ -43,7 +43,7 @@
                     <sp-data-explorer-widget-data-settings [(dataLakeMeasure)]="dataLakeMeasure"
                                                            [dataConfig]="currentlyConfiguredWidget.dataConfig"
                                                            [newWidgetMode]="newWidgetMode"
-                                                           (createWidgetEmitter)="createNewWidget($event)">
+                                                           (createWidgetEmitter)="createNewWidget()">
                     </sp-data-explorer-widget-data-settings>
                 </div>
 
