--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -16,37 +16,44 @@
   ~
   -->
 
-<div fxLayout="column" fxFlex="100" [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
+<div fxLayout="column" fxFlex="100"
+     [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
 
-        <sp-load-data-spinner *ngIf="showIsLoadingData" class="h-100"></sp-load-data-spinner>
+    <sp-load-data-spinner *ngIf="showIsLoadingData" class="h-100"></sp-load-data-spinner>
 
-        <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="timeSettings"></sp-no-data-in-date-range>
+    <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="timeSettings"></sp-no-data-in-date-range>
 
     <div class="table-container">
         <table
-            mat-table
-            mat-sort
-            *ngIf="showData"
-            [dataSource]="dataSource" matSort
-            (matSortChange)="sortData($event)" class="table-widget">
+                mat-table
+                mat-sort
+                *ngIf="showData"
+                [dataSource]="dataSource" matSort
+                (matSortChange)="sortData($event)" class="table-widget">
+
+            <ng-container
+                    [cdkColumnDef]="'time'">
+                <div>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef
+                        [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
+                        <label class="column-header">Timestamp</label>
+                    </th>
+                    <td mat-cell *matCellDef="let row" style="text-align: left;">
+                        {{row['time'] | date:'yyyy-MM-dd HH:mm:ss.SSS'}}
+                    </td>
+                </div>
+            </ng-container>
 
             <ng-container
                     *ngFor="let element of dataExplorerWidget.visualizationConfig.selectedColumns"
                     [cdkColumnDef]="element.fullDbName">
                 <div *ngIf="!isTimestamp(element)">
-                    <th mat-header-cell mat-sort-header *matHeaderCellDef [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef
+                        [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
                         <label class="column-header">{{element.fullDbName}}</label>
                     </th>
                     <td mat-cell *matCellDef="let row" style="text-align: left;">
                         {{row[element.fullDbName]}}
-                    </td>
-                </div>
-                <div *ngIf="isTimestamp(element)">
-                    <th mat-header-cell mat-sort-header *matHeaderCellDef [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
-                        <label class="column-header">{{element.fullDbName}}</label>
-                    </th>
-                    <td mat-cell *matCellDef="let row" style="text-align: left;">
-                        {{row[element.fullDbName]| date:'yyyy-MM-dd HH:mm:ss'}}
                     </td>
                 </div>
             </ng-container>
