[STREAMPIPES-79] Add start edit mode in widget view

--- a/ui/src/app/data-explorer/components/grid/data-explorer-dashboard-grid.component.html
+++ b/ui/src/app/data-explorer/components/grid/data-explorer-dashboard-grid.component.html
@@ -28,6 +28,7 @@
                     (updateCallback)="propagateItemUpdate($event)"
                     (deleteCallback)="propagateItemRemoval($event)"
                     (configureWidgetCallback)="propagateWidgetSelection($event)"
+                    (startEditModeEmitter)="startEditMode($event)"
                     [dashboardItem]="item"
                     [configuredWidget]="configuredWidgets.get(item.id)"
                     [dataLakeMeasure]="dataLakeMeasures.get(item.id)"
