[STREAMPIPES-402] Auto-select fields in visualization config

--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
@@ -43,6 +43,7 @@
                     <sp-data-explorer-widget-data-settings [(dataLakeMeasure)]="dataLakeMeasure"
                                                            [dataConfig]="currentlyConfiguredWidget.dataConfig"
                                                            [newWidgetMode]="newWidgetMode"
+                                                           [widgetId]="currentlyConfiguredWidget._id"
                                                            (createWidgetEmitter)="createNewWidget()">
                     </sp-data-explorer-widget-data-settings>
                 </div>
