[STREAMPIPES-402] Display selectable fields in visConfig as listt

--- a/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.css
+++ b/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.css
@@ -19,3 +19,10 @@
 /deep/ .mat-form-field-wrapper {
     padding-bottom: 0em;
 }
+
+.field-scroll-panel {
+    max-height: 200px;
+    overflow-y:auto;
+    overflow-x: hidden;
+}
+
