--- a/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.html
@@ -16,13 +16,24 @@
   ~
   -->
 
-<mat-form-field fxFlex="100" color="accent">
-    <mat-label>{{this.label}}</mat-label>
-    <mat-select [ngModel]="selectedProperties" (selectionChange)="triggerSelectedProperties($event.value)"
-                [multiple]="multiple" [compareWith]="compare">
-        <mat-option *ngFor="let column of availableProperties" [value]="column" style="background-color: #FFFFFF">
-            <b>{{column.runtimeName}}</b>
-            {{'(' +(column.aggregation ? column.aggregation + ', ': '') + column.measure +')'}}
-        </mat-option>
-    </mat-select>
-</mat-form-field>
+<div fxFlex="100" fxLayout="column">
+    <div fxLayout="row" fxLayoutAlign="start center">
+        <span class="data-explorer-header">Fields </span>
+        <div fxLayout="row" fxLayoutAlign="start center">
+            <button mat-button mat-raised-button color="accent" class="small-button"
+                    style="margin-right:10px;"
+                    (click)="selectAllFields()">Select all
+            </button>
+            <button mat-button mat-raised-button class="small-button mat-basic"
+                    style="margin-right:10px;"
+                    (click)="deselectAllFields()">Deselect all
+            </button>
+        </div>
+    </div>
+    <div fxLayout="column" class="field-scroll-panel">
+        <mat-checkbox color="accent" *ngFor="let field of availableProperties" [checked]="isSelected(field)" (change)="toggleFieldSelection(field)">
+            <b>{{field.runtimeName}}</b>
+            {{'(' +(field.aggregation ? field.aggregation + ', ': '') + field.measure +')'}}
+        </mat-checkbox>
+    </div>
+</div>
