--- a/ui/src/app/data-explorer/components/widgets/utils/aggregate-configuration/aggregate-configuration.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/aggregate-configuration/aggregate-configuration.component.html
@@ -20,34 +20,14 @@
 <div fxLayout="column" fxLayoutAlign="stretch" fxFlex="100">
     <div fxFlex="100" fxLayout="column" fxLayoutAlign="start center" class="ml-0 mr-0">
         <mat-form-field fxFlex="100" class="w-100" color="accent">
-            <mat-select [(value)]="queryConfig.aggregationTimeUnit" class="w-100">
+            <mat-select [(value)]="queryConfig.aggregationTimeUnit" class="w-100" (selectionChange)="triggerDataRefresh()">
                 <mat-option *ngFor="let agg of availableAggregations" [value]="agg.value">{{agg.label}}</mat-option>
             </mat-select>
             <mat-label>Unit</mat-label>
         </mat-form-field>
         <mat-form-field fxFlex="100" class="w-100" color="accent">
-            <input matInput type="number" [(ngModel)]="queryConfig.aggregationValue">
+            <input matInput type="number" [(ngModel)]="queryConfig.aggregationValue" (ngModelChange)="triggerDataRefresh()">
             <mat-label>Value</mat-label>
         </mat-form-field>
-<!--        <mat-form-field color="accent" fxFlex="100" class="w-100">-->
-<!--            <mat-label>Aggregation Function</mat-label>-->
-<!--            <mat-select [(ngModel)]="aggregationFunction" (ngModelChange)="onModelChange($event,'aggregationFunction')" >-->
-<!--                <mat-option [value]="'MEAN'">-->
-<!--                    <span class="pipeline-name">Mean</span>-->
-<!--                </mat-option>-->
-<!--                <mat-option [value]="'FIRST'">-->
-<!--                    <span class="pipeline-name">First</span>-->
-<!--                </mat-option>-->
-<!--                <mat-option [value]="'LAST'">-->
-<!--                    <span class="pipeline-name">Last</span>-->
-<!--                </mat-option>-->
-<!--                <mat-option [value]="'MIN'">-->
-<!--                    <span class="pipeline-name">Min</span>-->
-<!--                </mat-option>-->
-<!--                <mat-option [value]="'MAX'">-->
-<!--                    <span class="pipeline-name">Max</span>-->
-<!--                </mat-option>-->
-<!--            </mat-select>-->
-<!--        </mat-form-field>-->
     </div>
 </div>
