[STREAMPIPES-402] Highlight currently edited widget

--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
@@ -20,7 +20,7 @@
     <div fxLayout="row" class="sp-tab-bg designer-panel-header">
         <div fxLayoutAlign="start center" class="designer-panel-title">Widget Configuration</div>
         <div fxFlex fxLayoutAlign="end end">
-            <button mat-button mat-icon-button (click)="addWidget()">
+            <button mat-button mat-icon-button (click)="addWidget()" matTooltip="New widget">
                 <mat-icon>add</mat-icon>
             </button>
         </div>
