--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -18,16 +18,16 @@
 
 <div class="h-100 shadow">
     <div class="box"
-         [ngStyle]="{background: configuredWidget.baseAppearanceConfig.backgroundColor, color: configuredWidget.baseAppearanceConfig.textColor}">
+         [ngStyle]='{background: configuredWidget.baseAppearanceConfig.backgroundColor, color: configuredWidget.baseAppearanceConfig.textColor, border: currentlyConfiguredWidgetId === configuredWidget._id ? "2px solid var(--color-accent)" : "2px solid " + configuredWidget.baseAppearanceConfig.backgroundColor}'>
         <div class="widget-header h-40">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="widget-header-text">
                 {{ configuredWidget.baseAppearanceConfig.widgetTitle }}
             </div>
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-                <button mat-icon-button (click)="triggerWidgetEditMode()" *ngIf="editMode">
+                <button mat-button mat-icon-button (click)="triggerWidgetEditMode()" *ngIf="editMode" matTooltip="Edit widget">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More options">
+                <button mat-button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More options" matTooltip="More options">
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
