--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
@@ -82,3 +82,11 @@
     background: rgba(0,0,0,0.35);
 }
 
+.time-counter {
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 50px;
+    margin-right: 10px;
+}
+
