--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -18,12 +18,17 @@
 
 <div class="h-100 shadow">
     <div class="box"
-         [ngStyle]='{background: configuredWidget.baseAppearanceConfig.backgroundColor, color: configuredWidget.baseAppearanceConfig.textColor, border: currentlyConfiguredWidgetId === configuredWidget._id ? "2px solid var(--color-accent)" : "2px solid " + configuredWidget.baseAppearanceConfig.backgroundColor}'>
+         [ngStyle]='{background: configuredWidget.baseAppearanceConfig.backgroundColor,
+         color: configuredWidget.baseAppearanceConfig.textColor,
+         border: currentlyConfiguredWidgetId === configuredWidget._id ? "2px solid var(--color-accent)" : "2px solid " + configuredWidget.baseAppearanceConfig.backgroundColor}'>
         <div class="widget-header h-40">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="widget-header-text">
                 {{ configuredWidget.baseAppearanceConfig.widgetTitle }}
             </div>
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
+                <div class="time-counter" [ngStyle]="{background: configuredWidget.baseAppearanceConfig.textColor, color: configuredWidget.baseAppearanceConfig.backgroundColor}">
+                    {{loadingTime}}
+                </div>
                 <button mat-button mat-icon-button (click)="triggerWidgetEditMode()" *ngIf="editMode" matTooltip="Edit widget">
                     <mat-icon>edit</mat-icon>
                 </button>
@@ -63,6 +68,7 @@
                 <div *ngIf="configuredWidget.widgetType === 'line-chart'" class="h-100 p-0">
                     <sp-data-explorer-line-chart-widget
                             (removeWidgetCallback)="removeWidget()"
+                            (timerCallback)="handleTimer($event)"
                             [timeSettings]="timeSettings"
                             [gridsterItem]="dashboardItem"
                             [gridsterItemComponent]="gridsterItemComponent"
